updated kiosk tech mobile colors

--- a/trakberry/templates/kiosk/down_10r_style.html
+++ b/trakberry/templates/kiosk/down_10r_style.html
@@ -162,24 +162,6 @@
 		box-shadow: 0 8px #666;
 		transform: translateY(8px);
 	}
-	.button_gr {
- 
-  		height: 45px;
-  		text-align: center;
-  		cursor: pointer;
-  		outline: none;
-  		color: #000000;
-		background-color: #BDBDBD;
-		border: none;
-		border-radius: 15px;
-		box-shadow: 0 7px #999;
-	}
-	.button_gr:hover {background-color: #f0f0f0}
-	.buttongr:active {
-		background-color: #BDBDBD;
-		box-shadow: 0 8px #666;
-		transform: translateY(8px);
-	}
 	.button_y {
  
   		height: 45px;
@@ -199,7 +181,24 @@
 		transform: translateY(8px);
 	}
 
-
+	.button_gr {
+ 
+  		height: 45px;
+  		text-align: center;
+  		cursor: pointer;
+  		outline: none;
+  		color: #000000;
+		background-color: BDBDBD;
+		border: none;
+		border-radius: 15px;
+		box-shadow: 0 7px #999;
+	}
+	.button_gr:hover {background-color: f0f0f0}
+	.button_gr:active {
+		background-color: BDBDBD;
+		box-shadow: 0 8px #666;
+		transform: translateY(8px);
+	}
 	.tech_10r_scale_ipad {Transform:scale(1.0);}
 	.tech_10r_scale {Transform:scale(1.0);}
 	
