--- a/trakberry/templates/kiosk/down_10r_style_mobile.html
+++ b/trakberry/templates/kiosk/down_10r_style_mobile.html
@@ -183,6 +183,25 @@
 		box-shadow: 0 8px #666;
 		transform: translateY(8px);
 	}
+	.button_gr {
+ 
+  		height: 45px;
+  		text-align: center;
+		padding:13px;
+  		cursor: pointer;
+  		outline: none;
+  		color: #000000;
+		background-color: #BDBDBD;
+		border: none;
+		border-radius: 15px;
+		box-shadow: 0 7px #999;
+	}
+	.button_gr:hover {background-color: #f0f0f0}
+	.buttongr:active {
+		background-color: #BDBDBD;
+		box-shadow: 0 8px #666;
+		transform: translateY(8px);
+	}
 
 
 	.tech_10r_scale_ipad {Transform:scale(1.0);}
