updated heat display system

--- a/trakberry/templates/main_login_form.html
+++ b/trakberry/templates/main_login_form.html
@@ -27,11 +27,10 @@
     <option value="Evan George">Evan George</option>
 	<option value="Gary Harvey">Gary Harvey</option>
 	<option value="Jason Skillings">Jason Skillings</option>
-	<option value="Julie Reid">Julie Reid</option>
+	<option value="Justin Murray">Justin Murray</option>
 	<option value="Ken Frey">Ken Frey</option>
 	<option value="Kevin Baker">Kevin Baker</option>
 	<option value="Patrick Street">Patrick Street</option>
-	<option value="Raid Biram">Raid Biram</option>
 	<option value="Rick Wurm">Rick Wurm</option>
 	<option value="Rob Zylstra">Rob Zylstra</option>
 	<option value="Robin Melville">Robin Melville</option>
