--- a/trakberry/templates/redirect_production_entry_fix.html
+++ b/trakberry/templates/redirect_production_entry_fix.html
@@ -1,2 +1,2 @@
 
-<meta http-equiv="refresh" content="0; url=/trakberry/production_entry_fix" />
+<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/production_entry_fix" />
