--- a/trakberry/templates/main.html
+++ b/trakberry/templates/main.html
@@ -504,8 +504,8 @@ function goBack() {
 						<li><a href="{{request.session.local_toggle}}/tech_history2">Downtime Search</a></li>
 						
 						<li><a href="{{request.session.local_toggle}}/vacation_display_initial">Vacations</a></li>
-						<li><a href="{{request.session.local_toggle}}/tech_epv_week_assign">EPV Tech Assignment<b><mark>(** New ! **)</mark></b></a></li>
-						<li><a href="{{request.session.local_toggle}}/sup_pie_chart">EPV Completion <b><mark>(** New ! **)</mark></b></a></li>
+						<li><a href="{{request.session.local_toggle}}/tech_epv_week_assign">EPV Tech Assignment</a></li>
+						<li><a href="{{request.session.local_toggle}}/sup_pie_chart">EPV Completion</a></li>
 						<li><a href="{{request.session.local_toggle}}/manual_production_entry">Production Entries</a></li>
 						
 							
@@ -570,6 +570,7 @@ function goBack() {
 				<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span>Employees<b class="caret"></b></a>
 					<ul class="dropdown-menu multi-level">
                         <li><a href="{{request.session.local_toggle}}/training_matrix3">Training Matrix</a></li>
+						<li><a href="{{request.session.local_toggle}}/trainer_initialize">Trainers <b><mark>(** New ! **)</mark></b></a></li>
 						<li class="divider"></li> 
 						<li><a href="{{request.session.local_toggle}}/training_performance">Employee vs Job</a></li>
 						<li><a href="#">Schedules</a></li>
