added fixes for maintenance

--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=http://pmdsdata12/dashboard/cell_track_9341/" />
+    <!-- <meta http-equiv="refresh" content="0; url=http://pmdsdata12/dashboard/cell_track_9341/" /> -->
     <meta http-equiv="refresh" content="10;">
 
     <title>9341 Tracking</title>
