added the pareto for maintenance

--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -308,7 +308,13 @@
 			    	<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 
 
-				    <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Assets</a></li>	
+                    <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-lock"></span> Equipment<b class="caret"></b></a>
+                        <ul class="dropdown-menu multi-level"  style="background-color:rgb(245, 237, 219)" >
+                           <li><a href="{{request.session.local_toggle}}/downtime_month_selection">Downtime Analysis</a></li>
+
+                           
+                       </ul>
+                    </li>
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
                     
                     <li><a href="#"><span class="glyphicon glyphicon-user"></span> Manpower</a></li>
