--- a/trakberry/templates/master2.html
+++ b/trakberry/templates/master2.html
@@ -119,7 +119,7 @@
 
 								<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
 									<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
-
+										<li><a href="{{request.session.local_toggle}}/pareto_test">Pareto  <b><mark>(** New ! **)</mark></b></a></li>  
 										<li><a href="{{request.session.local_toggle}}/production_entry_cleanup">Cleanup Production Entries  <b><mark>(** New ! **)</mark></b></a></li>  
 
 										<li><a href="{{request.session.local_toggle}}/tech_PM_assign">Assign Tech PM</a></li>
