changes to pareto for dt history

--- a/trakberry/templates/downtime_month_selection.html
+++ b/trakberry/templates/downtime_month_selection.html
@@ -5,9 +5,11 @@
         table {
           border-collapse: collapse;
           border-spacing: 0;
-          width: 36%;scrap_ent = 0
-          border: 1px solid #ddd;
+          width: 36%;
+          border: 1px solid #000000;
           border-radius: 30px;
+    
+          
         }
         th, td {
           text-align: left;
@@ -45,7 +47,7 @@ label {
 
 
     <!-- </td></tr> -->
-    <th>Month</th><th>Product Line</th>
+    <th style="font-size: 150%;">Month</th><th style="font-size: 150%;">Product Line</th>
 
 </tr>
 
@@ -61,7 +63,7 @@ label {
     <select id="pline" name ="pline">
         <option value="10R80">10R80</option>
         <option value="AB1V Inputs">AB1V Inputs</option>
-        <option value="AB1V Outputs">AB1V Outputs</option>
+        <option value="AB1V Overdrives">AB1V Overdrives</option>
         <option value="AB1V Reactions">AB1V Reactions</option>
     </select>
      </td>
