--- a/trakberry/templates/pareto_test.html
+++ b/trakberry/templates/pareto_test.html
@@ -94,45 +94,59 @@ a:active {
 
     <br><br>
     <table style="width:95%;margin-left:3%;">
+    <tr><th style="font-size: 200%;">
+    <button onclick="location.href = '{{request.session.local_toggle}}/mgmt';" id="myButton" class="float-left submit-button" style="width: 100px;height: 30px;font-size: 14px;border-radius: 15px;"   ><b><< Back</b></button>
+    </th><th colspan="7" style="font-size: 200%;"></th></tr>
+
+    
+    
         <tr><th bgcolor="#B7C9C7" colspan="3" style="font-size: 200%;">
             <center><b><font color="#000000" size ="5">
                 <a href="{{request.session.local_toggle}}/downtime_category_selection/get/{{data2.0.3}}">{{data2.0.0}} {{data2.0.1}}</a>
+                <button onclick="window.open('{{request.session.local_toggle}}/downtime_category_history/get/{{data2.0.3}}', 'newwindow', 'width=1400, height=600'); return false;" id="myButton" class="float-left submit-button" style="width: 50px;height: 20px;font-size: 9px;border-radius: 15px;"   ><b> History </b></button>
 
             </font></b></center>
         </th>
         <th bgcolor="#BEC2FC" colspan="3" style="font-size: 200%;">
             <center><b><font color="#000000" size ="5">
                 <a href="{{request.session.local_toggle}}/downtime_category_selection/get/{{data2.1.3}}">{{data2.1.0}} {{data2.1.1}}</a>
+                <button onclick="window.open('{{request.session.local_toggle}}/downtime_category_history/get/{{data2.1.3}}', 'newwindow', 'width=1400, height=600'); return false;" id="myButton" class="float-left submit-button" style="width: 50px;height: 20px;font-size: 9px;border-radius: 15px;"   ><b> History </b></button>
             </font></b></center>
         </th>
         <th bgcolor="#B7C9C7" colspan="3" style="font-size: 200%;">
             <center><b><font color="#000000" size ="5">
                 <a href="{{request.session.local_toggle}}/downtime_category_selection/get/{{data2.2.3}}">{{data2.2.0}} {{data2.2.1}}</a>
+                <button onclick="window.open('{{request.session.local_toggle}}/downtime_category_history/get/{{data2.2.3}}', 'newwindow', 'width=1400, height=600'); return false;" id="myButton" class="float-left submit-button" style="width: 50px;height: 20px;font-size: 9px;border-radius: 15px;"   ><b> History </b></button>
             </font></b></center>
         </th> 
         <th bgcolor="#BEC2FC" colspan="3" style="font-size: 200%;">
             <center><b><font color="#000000" size ="5">
                 <a href="{{request.session.local_toggle}}/downtime_category_selection/get/{{data2.3.3}}">{{data2.3.0}} {{data2.3.1}}</a>
+                <button onclick="window.open('{{request.session.local_toggle}}/downtime_category_history/get/{{data2.3.3}}', 'newwindow', 'width=1400, height=600'); return false;" id="myButton" class="float-left submit-button" style="width: 50px;height: 20px;font-size: 9px;border-radius: 15px;"   ><b> History </b></button>
             </font></b></center>
         </th>
         <th bgcolor="#B7C9C7" colspan="3" style="font-size: 200%;">
             <center><b><font color="#000000" size ="5">
                 <a href="{{request.session.local_toggle}}/downtime_category_selection/get/{{data2.4.3}}">{{data2.4.0}} {{data2.4.1}}</a>
+                <button onclick="window.open('{{request.session.local_toggle}}/downtime_category_history/get/{{data2.4.3}}', 'newwindow', 'width=1400, height=600'); return false;" id="myButton" class="float-left submit-button" style="width: 50px;height: 20px;font-size: 9px;border-radius: 15px;"   ><b> History </b></button>
             </font></b></center>
         </th>
         <th bgcolor="#BEC2FC" colspan="3" style="font-size: 200%;">
             <center><b><font color="#000000" size ="5">
                 <a href="{{request.session.local_toggle}}/downtime_category_selection/get/{{data2.5.3}}">{{data2.5.0}} {{data2.5.1}}</a>
+                <button onclick="window.open('{{request.session.local_toggle}}/downtime_category_history/get/{{data2.5.3}}', 'newwindow', 'width=1400, height=600'); return false;" id="myButton" class="float-left submit-button" style="width: 50px;height: 20px;font-size: 9px;border-radius: 15px;"   ><b> History </b></button>
             </font></b></center>
         </th>
         <th bgcolor="#B7C9C7" colspan="3" style="font-size: 200%;">
             <center><b><font color="#000000" size ="5">
                 <a href="{{request.session.local_toggle}}/downtime_category_selection/get/{{data2.6.3}}">{{data2.6.0}} {{data2.6.1}}</a>
+                <button onclick="window.open('{{request.session.local_toggle}}/downtime_category_history/get/{{data2.6.3}}', 'newwindow', 'width=1400, height=600'); return false;" id="myButton" class="float-left submit-button" style="width: 50px;height: 20px;font-size: 9px;border-radius: 15px;"   ><b> History </b></button>
             </font></b></center>
         </th>
         <th bgcolor="#BEC2FC" colspan="3" style="font-size: 200%;">
             <center><b><font color="#000000" size ="5">
                 <a href="{{request.session.local_toggle}}/downtime_category_selection/get/{{data2.7.3}}">{{data2.7.0}} {{data2.7.1}}</a>
+                <button onclick="window.open('{{request.session.local_toggle}}/downtime_category_history/get/{{data2.7.3}}', 'newwindow', 'width=1400, height=600'); return false;" id="myButton" class="float-left submit-button" style="width: 50px;height: 20px;font-size: 9px;border-radius: 15px;"   ><b> History </b></button>
             </font></b></center>
         </th>                                           
     
