updated AB1V Prod10r

--- a/trakberry/templates/master2.html
+++ b/trakberry/templates/master2.html
@@ -158,12 +158,12 @@
 										<li><a href="{{request.session.local_toggle}}/medium_production">Generate Medium Production</a></li> 
 										<li><a href="{{request.session.local_toggle}}/track_email">Track Email</a></li> 
 										<li><a href="{{request.session.local_toggle}}/cell_track_9341_mobile">9341 Cell MOBILE</a></li>  
-										<li><a href="{{request.session.local_toggle}}/cell_track_9341">9341 Cell</a></li>  
+										<li><a href="http://10.4.1.234/dashboard/cell_track_9341/">9341 Cell</a></li>  
 										<li><a href="{{request.session.local_toggle}}/cell_track_9341_TV">9341 Cell_TV</a></li>  
 										<li><a href="{{request.session.local_toggle}}/cell_9341_screen">9341 Cell Track Underperformer</a></li> 
 										<li><a href="{{request.session.local_toggle}}/cell_9341_mobile">9341 Cell Track Underperformer MOBILE</a></li>  
-										<li><a href="{{request.session.local_toggle}}/cell_track_1467">1467 Cell</a></li>  
-										<li><a href="{{request.session.local_toggle}}/cell_track_8670">8670 Cell</a></li>  
+										<li><a href="http://10.4.1.234/dashboard/cell_track_1467/">1467 Cell</a></li>  
+										<li><a href="http://10.4.1.234/dashboard/cell_track_8670/">8670 Cell</a></li>  
 										<li><a href="{{request.session.local_toggle}}/wip_update">wip_update</a></li>  
 										<li><a href="{{request.session.local_toggle}}/gf6_reaction">gf6_reaction</a></li> 
 										<li><a href="{{request.session.local_toggle}}/gf6_input">gf6_input</a></li> 
@@ -184,6 +184,18 @@
 								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 								<li><a href="#"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-folder-open"></span> Extras</a></font></li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+
+								<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Testing <b class="caret"></font></b></a>
+									<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
+										<li><a href="{{request.session.local_toggle}}/supervisor_schedule/">Supervisor Schedules</a></li>
+									</ul>
+								</li>
+
+
 							</ul>	
 
 
