changes to HR Safety entry

--- a/trakberry/templates/hr.html
+++ b/trakberry/templates/hr.html
@@ -44,6 +44,16 @@
 									</li>
 									<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 
+									<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+									
+									<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-folder-open"></span> Health & Safety<b class="caret"></b></a>
+										<ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
+											<li><a href="{{request.session.local_toggle}}/hr_down">Maint App Entry</a></li>
+										</ul>
+									</li>
+									<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+
+
 	
 
 									<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
