--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -293,6 +293,7 @@
 					
                     <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span> Production<b class="caret"></b></a>
                          <ul class="dropdown-menu multi-level"  style="background-color:rgb(245, 237, 219)" >
+							<li><a href="http://pmdsdata12/prod-query/weekly-prod">Weekly Production Summary<b><mark>(** New ! **)</mark></b></a></li>
 							<li><a href="{{request.session.local_toggle}}/track_9341_history_date">10R Production History<b><mark>(** New ! **)</mark></b></a></li>
 							<li><a href="#">Track the Week<b><mark></mark></b></a></li>
                             <!-- <li><a href="{{request.session.local_toggle}}/mgmt_track_week">Track the Week<b><mark></mark></b></a></li> -->
