--- a/trakberry/templates/hr_down.html
+++ b/trakberry/templates/hr_down.html
@@ -19,7 +19,7 @@
 <form action="" method="post">{% csrf_token %}
 <table style="width:40%;margin-left:10%;">
 	<tr><th bgcolor="#B7C9C7" colspan="3" style="font-size: 200%;">
-		<center><b><u><font color="#000000" size ="5">{{request.session.whoisonit}} Call</font></u></b></center>
+		<center><b><u><font color="#000000" size ="5">Health and Safety Job</font></u></b></center>
 	</th></tr>
 <tr><th bgcolor="#B6D6E0"><center>
 <font color="#000000" size ="4">Machine Down <br>
