--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -112,7 +112,7 @@
 		.wrapper_main {background:chartreuse;width:90%;margin-left: 10px;}
 		
 		.frame1 {color:black;text-align:center;float:left;width:32%;margin-bottom: 5px;}
-		.frame16 {color:black;text-align:center;float:left;width:50%;margin-bottom: 5px;}
+		.frame16 {color:black;text-align:center;float:left;width:80%;margin-bottom: 5px;}
 		.frame2a{color:black;text-align:center;background:rgb(202, 188, 83);float:left;width:32%;position:relative;left:5px;border-radius: 15px;margin-bottom: 5px;}
 
 		.frame2{color:black;text-align:center;background:rgb(83, 134, 202);float:left;width:32%;position:relative;left:5px;margin-bottom: 5px;}
@@ -324,6 +324,7 @@
                             <!-- <li><a href="{{request.session.local_toggle}}/mgmt_production_hourly">Hourly Entries</a></li> -->
                             <li><a href="{{request.session.local_toggle}}/mgmt_cycletime">Cycle Times</a></li>
 							<li><a href="{{request.session.local_toggle}}/date_picker_production_OA">Production OA<b><mark>(** New ! **)</mark></b></a></li>
+							<li><a href="{{request.session.local_toggle}}/production_OA_24hrs">Production 24hrs<b><mark>(** New ! **)</mark></b></a></li>
                         </ul>
                      </li>
 			    	<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
