--- a/trakberry/templates/kiosk/kiosk_menu.html
+++ b/trakberry/templates/kiosk/kiosk_menu.html
@@ -38,8 +38,8 @@
 
 
 	<div class="frame1"><br><br><br><br><br><br><br>
-		<button class="button" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r';">
-			<font size="6"><b>Press Changeover</b></font><br><font size="5" style="color:rgb(132, 133, 73);"><b>** Coming Soon **</b></font>
+		<button class="button" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/press_changeover_enter';">
+			<font size="6"><b>Press Changeover</b></font><br><font size="5" style="color:rgb(132, 133, 73);"><b>** NEW **</b></font>
 		</button>
 	</div>
 
