--- a/trakberry/templates/main_login_form.html
+++ b/trakberry/templates/main_login_form.html
@@ -16,28 +16,30 @@
 <select style="font-size:14px;width:320px;height:30px;" name="login_name" >
 
 	<option value="Dave Clark">Dave Clark</option>
-	<option value="Nathan Klein-Geltink">Nathan Klein-Geltink</option>
+	
 	<option value="Andrew Smith">Andrew Smith</option>
+	<option value="Andrew Terpstra">Andrew Terpstra</option>
 	<option value="Chris Dufton">Chris Dufton</option>
-	<option value="Dave Godbout">Dave Godbout</option>
-    <option value="Dave McLaren">Dave McLaren</option>
+	<option value="Dave McLaren">Dave McLaren</option>
 	<option value="Dave Milne">Dave Milne</option>
-	<option value="Dillon Hawthorn">Dillon Hawthorn</option>
 	<option value="Don Barber">Don Barber</option>
-    <option value="Evan George">Evan George</option>
+	<option value="Evan George">Evan George</option>
 	<option value="Gary Harvey">Gary Harvey</option>
-	<option value="Jason Skillings">Jason Skillings</option>
+	<option value="Jamie Pearce">Jamie Pearce</option>
 	<option value="Justin Murray">Justin Murray</option>
 	<option value="Ken Frey">Ken Frey</option>
 	<option value="Kevin Baker">Kevin Baker</option>
-	<option value="Patrick Street">Patrick Street</option>
+	<option value="Mark Morse">Mark Morse</option>
+	<option value="Nathan Klein-Geltink">Nathan Klein-Geltink</option>
+	<option value="Paul Currie">Paul Currie</option>
+
 	<option value="Rick Wurm">Rick Wurm</option>
-	<option value="Rob Zylstra">Rob Zylstra</option>
 	<option value="Robin Melville">Robin Melville</option>
     <option value="Saurabh Bhardwaj">Saurabh Bhardwaj</option>
 	<option value="Scott Brownlee">Scott Brownlee</option>
 	<option value="Scott Herman">Scott Herman</option>
 	<option value="Scott McMahon">Scott McMahon</option>
+	<option value="Shivam Bhatt">Shivam Bhatt</option>
 	<option value="Stuart Burbidge">Stuart Burbidge</option>
 
 
