--- a/trakberry/templates/supervisor.html
+++ b/trakberry/templates/supervisor.html
@@ -99,11 +99,11 @@ a.green:hover {color: #FFFFFF;background-color: #315225;border-radius: 25px;}
 <form action="" method="post">{% csrf_token %}
 
 <table style="width:90%;margin-left:5%;">
-	<tr><th colspan="4" bgcolor="#B6D6E0" style="font-size: 160%;">
+	<tr><th colspan="5" bgcolor="#B6D6E0" style="font-size: 160%;">
 		<center><u><font color="#000000">Machine Downtime</u></center>
 	</th></tr>
 	
-	<tr><th bgcolor="#B6D6E0" style="width:25%;">
+	<tr><th bgcolor="#B6D6E0" style="width:20%;">
 		<center> 
 			
 
@@ -114,13 +114,13 @@ a.green:hover {color: #FFFFFF;background-color: #315225;border-radius: 25px;}
 		
 		</center>
 
-	</th><th bgcolor="#B6D6E0" style="width:25%;">
+	</th><th bgcolor="#B6D6E0" style="width:20%;">
 	
 		<center>
 		<button style="background-color: #5CC4ED;border-radius: 10px;width:90%;height:80%;font-weight: 600;"type="submit" name="one" value="-2" /><center><font color="#000000">Tech</font></center></button>
 		</center>
 
-</th><th bgcolor="#B6D6E0" style="width:25%;">
+</th><th bgcolor="#B6D6E0" style="width:20%;">
 	
 		<center>
 
@@ -129,7 +129,7 @@ a.green:hover {color: #FFFFFF;background-color: #315225;border-radius: 25px;}
 
 		</center>
 </th>
-<th bgcolor="#B6D6E0" style="width:25%;">
+<th bgcolor="#B6D6E0" style="width:20%;">
 	
 		<center>
 
@@ -140,29 +140,43 @@ a.green:hover {color: #FFFFFF;background-color: #315225;border-radius: 25px;}
 
 		</center>
 </th>
+
+<th bgcolor="#B6D6E0" style="width:20%;">
+	
+	<center>
+
+
+<button style="background-color: #5CC4ED;border-radius: 10px;width:90%;height:80%;font-weight: 700;"type="submit" name="one" value="-5" /><center><font color="#000000">Area 1 Press C/O</font></center></button>
+
+
+
+	</center>
+</th>
+
 </tr>
 
 
 
-<tr><th bgcolor="#74B9CF" colspan="4" style="font-size: 160%;">
+<tr><th bgcolor="#74B9CF" colspan="5" style="font-size: 160%;">
 <center><b><u>Issues</u></b></center>
 </th></tr>
 
 {% for i in L %}
-<tr><th bgcolor="#b6d6e0" colspan="4" style="font-size: 90%;">
+<tr><th bgcolor="#b6d6e0" colspan="5" style="font-size: 90%;">
 
+	{% if i.4 != "-1" %}
 
+		{% if i.1|slice:"-3:" = 'WFP' %}
+			<button style="text-align: left;width:100%;font-size: 100%;border-style: solid;border-color:#b6d6e0;border-radius: 0px;background-color:#b6d6e0;"
+			type="submit" name="one" value="{{i.2}}" /><font color="#A2A2A2">[{{i.4}}] {{i.0}}({{i.3}}):{{i.1}}</font></button>
+		{% elif i.1|slice:"-7:" = 'Project' %}
+			<button style="text-align: left;width:100%;font-size: 100%;border-style: solid;border-color:#b6d6e0;border-radius: 0px;background-color:#b6d6e0;"
+			type="submit" name="one" value="{{i.2}}" /><font color="#777777">[{{i.4}}] {{i.0}}({{i.3}}):{{i.1}}</font></button>
+		{% else %}
+			<button style="text-align: left;width:100%;font-size: 100%;border-style: solid;border-color:#b6d6e0;border-radius: 0px;background-color:#b6d6e0;"
+			type="submit" name="one" value="{{i.2}}" /><font color="#000000">[{{i.4}}] {{i.0}}({{i.3}}):{{i.1}}</font></button>
+		{% endif %}
 
-	{% if i.1|slice:"-3:" = 'WFP' %}
-		<button style="text-align: left;width:100%;font-size: 100%;border-style: solid;border-color:#b6d6e0;border-radius: 0px;background-color:#b6d6e0;"
-		type="submit" name="one" value="{{i.2}}" /><font color="#A2A2A2">[{{i.4}}] {{i.0}}({{i.3}}):{{i.1}}</font></button>
-
-	{% elif i.1|slice:"-7:" = 'Project' %}
-		<button style="text-align: left;width:100%;font-size: 100%;border-style: solid;border-color:#b6d6e0;border-radius: 0px;background-color:#b6d6e0;"
-		type="submit" name="one" value="{{i.2}}" /><font color="#777777">[{{i.4}}] {{i.0}}({{i.3}}):{{i.1}}</font></button>
-	{% else %}
-		<button style="text-align: left;width:100%;font-size: 100%;border-style: solid;border-color:#b6d6e0;border-radius: 0px;background-color:#b6d6e0;"
-		type="submit" name="one" value="{{i.2}}" /><font color="#000000">[{{i.4}}] {{i.0}}({{i.3}}):{{i.1}}</font></button>
 	{% endif %}
 
 </th></tr>
